# lime_test

./: .gitignore  pyproject.toml
lime/: requirements.txt
lime/board/: admin.py  models.py  tests.py  urls.py  views.py
lime/board/api/: TODO_list.py  serializers.py  tests.py  urls.py  views.py
lime/board/api/restconf/: main.py  pagination.py
lime/board/templates/: base_board.html  board_detail.html  task_confirm_delete.html  task_edit.html
lime/lime/: forms.py  settings.py  urls.py  views.py  wsgi.py
lime/templates/: base.html
lime/templates/auth/: login.html  signup.html
tests/: test_linestone.py
