[tool.poetry]
name = "linestone"
version = "0.1.0"
description = ""
authors = ["kuksabird <samoilovartem1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
